<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="68dp"
        android:textSize="56sp"
        android:text="@string/page_2"
        android:textStyle="bold"
        android:textColor="@color/company_text">
    </TextView>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="208dp"
        android:hint="@string/address"
        tools:ignore="Autofill"
        android:inputType="text" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="268dp"
        android:hint="@string/username"
        tools:ignore="Autofill"
        android:inputType="text" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="328dp"
        android:hint="@string/password"
        tools:ignore="Autofill"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="388dp"
        android:hint="@string/port"
        tools:ignore="Autofill"
        android:inputType="number" />

    <Button
        android:id="@+id/connection"
        android:onClick="OracleConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:padding="24dp"
        android:text="@string/connection"
        android:textSize="16sp">
    </Button>
</FrameLayout>